Printing type when failing numeric or default comparison